# richlogger

./: README.md  pyproject.toml
src/richlogger/: logger.py
